# NatuurSpotter

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: demo.ipynb  demo1.ipynb
integrations/node-red/: node_red_flow.json
scripts/: run_natuurspotter.py
src/natuurspotter/: __init__.py  core.py
tests/: test_core_regressions.py
